--- a/about.html
+++ b/about.html
@@ -10,15 +10,22 @@
     <link rel="stylesheet" type="text/css" href="fancy.css">
   </head>
   <body>
-    <h3>Favorite TV shows</h3>
+    <h2>Favorite TV shows</h2>
+    <p>(In no particular order)</p>
     <ul>
         <li>Psych</li>
         <li>The Office</li>
         <li>How I Met Your Mother</li>
         <li>Parks and Rec</li>
     </ul>
-    <p>This is to my favorite <a href="https://www.youtube.com">site</a></p>
-    <img src="./img/mountians.jpg" alt="Italian Trulli">
-    <iframe width="420" height="315" src="https://www.youtube.com/embed/zKu1Y-LlfNQ"> </iframe>
+    <p>My favorite site would probably have to be <a style="color:red;" href="https://www.youtube.com">YouTube</a></p>
+    <p class="img">I absolutely love hiking</p>
+    <div class="img"><img class="img" src="./img/mountians.jpg" alt="Nature" width="720" height="auto"></div>
+    <p>This video gets me exicted to see what next gen videogames will look like!</p>
+    <div class="video"><iframe width="620" height="520" src="https://www.youtube.com/embed/zKu1Y-LlfNQ"></iframe></div>
+    <!-- footer -->
+    <div id="footer">
+      <p>&copy; Joshua Garcia 2019</p>
+    </div>
   </body>
 </html>
